fixes a bug that prevented the text to be shown in new lines for every entry

--- a/.github/open-pr-slack-action/action.yml
+++ b/.github/open-pr-slack-action/action.yml
@@ -17,7 +17,7 @@ runs:
           GH_TOKEN: ${{ github.token }}
         run: |
           PR_LIST=$(gh pr list --json number,title,url,assignees --state OPEN --limit 100 --search 'is:pr is:open draft:false')
-          echo "pr-details=$(echo $PR_LIST | jq -r '.[] | "• \\<\(.url)\\|\(.title)> - by \((.assignees | if . != [] then .[].login else "🫥" end))" | gsub("\\\\";"")' | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
+          echo "pr-details=$(echo $PR_LIST | jq -r '.[] | "• \\<\(.url)\\|\(.title)> - by \((.assignees | if . != [] then .[].login else "🫥" end))" | gsub("\\\\";"")' | sed 's/,$//')" >> $GITHUB_OUTPUT
           echo "pr-list=$PR_LIST" >> $GITHUB_OUTPUT
       - name: get amount of all open prs from github
         shell: bash
