--- a/action.yml
+++ b/action.yml
@@ -104,4 +104,4 @@ runs:
             ]
       - name: Result from "Send Message"
         shell: bash
-        run: echo "The result was ${{ steps.notify.outputs.slack-result }}"
+        run: echo "The result was ${{ steps.notify.outputs.slack-result }} ${{ steps.notify-multiple.outputs.slack-result }}"
